--- a/estudantes/static/estudantes/css/mostra_horarios.css
+++ b/estudantes/static/estudantes/css/mostra_horarios.css
@@ -21,12 +21,16 @@
 }
 
 .highlight {
-  background-color: yellow;
+  background-color: yellow !important;
 }
 
 .meu {
   border-color: red !important;
   border-width: 3px !important;
+}
+
+.aexterno {
+  background-color: rgba(0, 0, 255, 0.1);
 }
 
 .overlay {
