--- a/projetos/templates/projetos/projeto_completo.html
+++ b/projetos/templates/projetos/projeto_completo.html
@@ -477,7 +477,7 @@
         <ul>
           {% for despesa in projeto.despesa_set.all %}
             <li>
-              {% if despesa.data %}{{despesa.data}}{% else %}DATA INDEFINIDA{% endif %}
+              {% if despesa.data %}{{despesa.data}}{% else %}{% lng "DATA INDEFINIDA" "UNDEFINED DATE" %}{% endif %}
               {% if despesa.descricao %} - [{{despesa.descricao}}]{% endif %}
               = 
               {% if despesa.valor_r %} R$ {{despesa.valor_r|stringformat:".2f"}}{% endif %}
