mostrando projetos sem mentorias

--- a/professores/templates/professores/bancas_index.html
+++ b/professores/templates/professores/bancas_index.html
@@ -16,8 +16,7 @@
 {% block content %}
 
   <span class="esconder">
-    <a href="{% url 'bancas_criar'%}"
-    class="open-modal" style="cursor:pointer;"
+    <a href="{% url 'bancas_criar'%}" class="open-modal" style="cursor:pointer;"
     data-url="{% url 'bancas_criar' %}">
       <i class="fas fa-plus"></i>
       {% lng "Cadastrar Nova Banca" "Register New Examination Board" %}
