--- a/professores/templates/professores/dinamicas_lista.html
+++ b/professores/templates/professores/dinamicas_lista.html
@@ -9,41 +9,20 @@
   {% load static %}
   {% load linguas %}
   <link rel="stylesheet" href="{% static 'css/tab_arrend.css' %}">
+  <link rel="stylesheet" href="{% static 'professores/css/agendamentos.css' %}">
   {% include "heads_calendar.html" %}
   {% include "cores_bancas_mentorias.html" %}
-  
-  <style>
-    select {margin-right: 16px;}
-
-    .agendamento {
-      display: flex;
-      flex-wrap: wrap;
-      align-items: center;
-      justify-content: space-between;
-      margin-top: 8px;
-    }
-    
-    .agendamento > * {
-        margin-left: 4px;
-    }
-    
-    .editar {
-        margin-left: auto;
-        float: right;
-    }
-
-    @media (max-width: 800px) {
-      .btn {
-          font-size: 0.75rem; /* Smaller font size */
-          padding: 0.25rem 0.5rem; /* Smaller padding */
-      }
-    }
-
-  </style>
 {% endblock %}
 
 {% block content %}
-  
+
+  {% include "edicoes.html" %}
+  <script>
+    $("#filterEdicao").append($("<option>", {value: "proximas", text: "proximas", selected: "selected"}));
+  </script>
+
+  {% include "informacoes_ml.html" %}<br>
+
   <span class="esconder">
     <a href="{% url 'dinamicas_criar'%}" class="open-modal" style="cursor:pointer;"
     data-url="{% url 'dinamicas_criar' %}">
@@ -51,18 +30,6 @@
       {% lng "Agendar Mentoria" "Schedule Mentoring" %}
     </a>
   </span>
-
-  {% include "edicoes.html" %}
-
-  <script>
-    $("#filterEdicao").append($("<option>", {
-        value: "proximas",
-        text: "proximas",
-        selected: "selected"
-    }));
-  </script>
-
-  {% include "informacoes_ml.html" %}
 
   <div class="atualizar">
 
@@ -129,41 +96,38 @@
     <h4>{% lng "Calendário" "Calendar" %}</h4>
     {% include "calendario_dinamicas.html" %}
 
+    <div class="sem_agendamento">
+      {% if sem_dinamicas %}
+        <br>
+        <h5>{% lng "Projetos ativos sem mentorias agendadas." "Active projects without scheduled mentoring." %}:</h5>
+        <ul>
+        {% for projeto in sem_dinamicas %}
+          <li>
+
+            {% if projeto.organizacao %}
+              [<a class="imprimir" href="{% url 'organizacao_completo' projeto.organizacao.id %}"
+                >{{ projeto.organizacao.nome }}</a
+              >]
+            {% endif %}
+
+            <a class="imprimir" href="{% url 'projeto_completo' projeto.id %}">{{projeto.get_titulo}}</a>
+            {% include "tipo_projeto.html" %}
+            
+          </li>
+        {% endfor %}
+        </ul>
+      {% endif %}
+    </div>
+
   </div>
 
-  <div class="sem_agendamento">
-    {% if sem_dinamicas %}
-      <br>
-      <h5>{% lng "Projetos ativos sem mentorias agendadas." "Active projects without scheduled mentoring." %}:</h5>
-      <ul>
-      {% for projeto in sem_dinamicas %}
-        <li>
-
-          {% if projeto.organizacao %}
-            [<a class="imprimir" href="{% url 'organizacao_completo' projeto.organizacao.id %}"
-              >{{ projeto.organizacao.nome }}</a
-            >]
-          {% endif %}
-
-          <a class="imprimir" href="{% url 'projeto_completo' projeto.id %}">{{projeto.get_titulo}}</a>
-          {% include "tipo_projeto.html" %}
-          
-        </li>
-      {% endfor %}
-      </ul>
-    {% endif %}
-  </div>
 
   <script>
-
-    function carrega_pagina() {
-      montar_calendario();
-    };
+    function carrega_pagina() {montar_calendario();};
     function carrega_site() {
       {% include "edicao_puxar_local_ou_versao.js" %}
       carrega_pagina();
     };
-
     window.onload = carrega_site
   </script>
 
