--- a/documentos/templates/documentos/exibir_ocultar_notas.html
+++ b/documentos/templates/documentos/exibir_ocultar_notas.html
@@ -18,7 +18,7 @@
     {% include "edicoes.html" with n_todas=True  %}
     <br>
   
-    <div class="atualizar">
+    <div id="atualizar">
       {% include "mostrar_notas.html" with titulo_lista="Exame" com_borda=True %}
     </div>
     <br>
