--- a/operacional/templates/operacional/plano_aulas.html
+++ b/operacional/templates/operacional/plano_aulas.html
@@ -16,7 +16,7 @@
   
   {% include "edicoes.html" with n_todas=True %}
 
-  <div class="atualizar">
+  <div id="atualizar">
     <div class="table-responsive">
       <b>Programa</b>
       <table id="AulasTable" class="table-bordered table-sm">
