--- a/organizacoes/templates/organizacoes/organizacoes_projetos.html
+++ b/organizacoes/templates/organizacoes/organizacoes_projetos.html
@@ -61,7 +61,7 @@
 
   {% include "edicoes.html" with com_acompanhamento=True %}
 
-  <div class="atualizar">
+  <div id="atualizar">
 
     <div class="table-responsive">
 
