--- a/organizacoes/templates/organizacoes/todos_parceiros.html
+++ b/organizacoes/templates/organizacoes/todos_parceiros.html
@@ -15,7 +15,7 @@
 
   {% include "edicoes.html" %}
 
-  <div class="atualizar">
+  <div id="atualizar">
 
     {% include "tabelas_top_ml.html" with tabela="Parceiros" cabecalhos=cabecalhos %}
       {% for parceiro in parceiros %}
