--- a/professores/templates/professores/dinamicas_lista.html
+++ b/professores/templates/professores/dinamicas_lista.html
@@ -28,7 +28,7 @@
     </a>
   </span>
 
-  <div class="atualizar">
+  <div id="atualizar">
 
     {% if encontros %}
       <table id="MentoriasTable" class="table table-borderless table-sm arredondado"><tbody>
