--- a/professores/templates/professores/relatos_quinzenais.html
+++ b/professores/templates/professores/relatos_quinzenais.html
@@ -16,7 +16,7 @@
   
   {% include "edicoes.html" %}
   
-  <div class="atualizar">
+  <div id="atualizar">
 
     {% if not edicoes %}
       {% for projeto, alocacoes in proj_aloc %}
