--- a/projetos/templates/projetos/certificacao_falconi.html
+++ b/projetos/templates/projetos/certificacao_falconi.html
@@ -55,7 +55,7 @@
   
   {% include "edicoes.html" with n_todas=True %}
 
-  <div class="atualizar">
+  <div id="atualizar">
     <div class="container">
 
       <div class="row mt-4 justify-content-center text-center graficos">
