--- a/projetos/templates/projetos/correlacao_medias_cr.html
+++ b/projetos/templates/projetos/correlacao_medias_cr.html
@@ -31,7 +31,7 @@
       </div>
   </div>
 
-  <div class="atualizar">
+  <div id="atualizar">
 
     {% if periodo and curso %}
       {% with file_name="correlacao_"|addstr:periodo.0|addstr:"_"|addstr:periodo.1|addstr:"_"|addstr:curso %}
