--- a/projetos/templates/projetos/filtro_projetos.html
+++ b/projetos/templates/projetos/filtro_projetos.html
@@ -15,7 +15,7 @@
   {% include "edicoes.html" %}
   {% include "areas.html" with tudo_ligado=True titulo_areas=True not_outras=True com_borda=True %}
   
-  <div class="atualizar">
+  <div id="atualizar">
     {% include "tabelas_top_ml.html" with tabela="Projetos" cabecalhos=cabecalhos %}
       {% for projeto in projetos %}
         {% with estudantes=projeto.alocacao_set.all areas=projeto.proposta.areadeinteresse_set.all %}
