--- a/projetos/templates/projetos/interesses_projetos.html
+++ b/projetos/templates/projetos/interesses_projetos.html
@@ -16,7 +16,7 @@
 
   {% include "edicoes.html" %}
   <br>
-  <div class="atualizar">
+  <div id="atualizar">
 
     <b>{% lng "Total de Propostas" "Total of Proposals" %}</b> = {{ propostas.count }}<br>
     <b>{% lng "Total de Projetos" "Total of Projects" %}</b> = {{ projetos.count }}<br>
