--- a/users/templates/users/blackboard_notas.html
+++ b/users/templates/users/blackboard_notas.html
@@ -27,7 +27,7 @@
     {% lng "Edição:" "Edition:" %}  </b>
   {{ anosemestre }}<br>
   
-  <div class="atualizar">
+  <div id="atualizar">
 
     <form method="post" enctype="multipart/form-data">{% csrf_token %}
     
