--- a/professores/templates/professores/coorientadores_tabela.html
+++ b/professores/templates/professores/coorientadores_tabela.html
@@ -15,7 +15,7 @@
   {% include "edicoes.html" %}
   {% include "informacoes_ml.html" %}
 
-  <div class="atualizar">
+  <div id="atualizar">
 
     {% include "tabelas_top_ml.html" with tabela="Coorientacoes" cabecalhos=cabecalhos %}
          
