--- a/projetos/templates/projetos/distribuicao_areas.html
+++ b/projetos/templates/projetos/distribuicao_areas.html
@@ -36,7 +36,7 @@
 
   <br>
 
-  <div class="atualizar">
+  <div id="atualizar">
 
     <div class="2areas2" style="line-height: 1.3;">
       <ul class="chart">
