--- a/propostas/templates/propostas/mapeamento_estudante_projeto.html
+++ b/propostas/templates/propostas/mapeamento_estudante_projeto.html
@@ -19,7 +19,7 @@
   {% include "edicoes.html" with n_todas=True %}
   {% include "informacoes_ml.html" %}
 
-  <div class="atualizar">
+  <div id="atualizar">
     
     <div class="table-responsive">
       <table id="MapeamentoTable">
