--- a/users/templates/users/estudantes_inscritos.html
+++ b/users/templates/users/estudantes_inscritos.html
@@ -20,7 +20,7 @@
   
   {% include "edicoes.html" with n_todas=True %}
 
-  <div class="atualizar">
+  <div id="atualizar">
 
     {% include "tabelas_top_ml.html" with tabela="Estudantes" cabecalhos=cabecalhos %}
 
