--- a/users/templates/users/projetos_objetivos.html
+++ b/users/templates/users/projetos_objetivos.html
@@ -19,7 +19,7 @@
 
   {% include "edicoes.html" with n_todas=True %}
   
-  <div class="atualizar">
+  <div id="atualizar">
     {% include "tabelas_top_ml.html" with tabela="Estudantes" cabecalhos=cabecalhos %}
       {% for projeto in projetos %} 
         <tr class="item">
