--- a/operacional/templates/operacional/operacional.html
+++ b/operacional/templates/operacional/operacional.html
@@ -37,7 +37,7 @@
     {% lng "(tabela)" "(table)" %}
   </a>
 </a></div>
-<div class="item_lista"><span class="circulo">&#9899;</span> <a href="{% url 'dinamicas_index' %}">
+<div class="item_lista"><span class="circulo">&#9899;</span> <a href="{% url 'dinamicas_lista' %}">
   {% lng "Mentorias" "Mentorships" %}
 </a></div>
 <div class="item_lista"><span class="circulo">&#9899;</span> <a href="{% url 'pendencias_professores' %}">
