--- a/professores/templates/professores/dinamicas_lista.html
+++ b/professores/templates/professores/dinamicas_lista.html
@@ -98,7 +98,7 @@
         <br>
         <h5>
           {% lng "Projetos ativos sem mentorias agendadas" "Active projects without scheduled mentoring" %}:
-          <a href="mailto:{% for projeto in sem_dinamicas %}{% for alocacao in projeto.alocacao_set.all %}{{alocacao.aluno.user.email}}{% endfor %}{% if not forloop.last %},{% endif %}{% endfor %}?subject=Capstone%20Insper%20-%20Projeto:%20{{projeto}}&body=Orientador{% if sem_banca|length > 1 %}s{% endif %}%20,%0D%0A%0D%0Aatenciosamente,%20{{configuracao.coordenacao.coordenador_email}}%20(coordenação%20Capstone)" target="_blank">
+          <a href="mailto:{% for projeto in sem_dinamicas %}{% for alocacao in projeto.alocacao_set.all %}{{alocacao.aluno.user.email}}{% if not forloop.last %};{% endif %}{% endfor %}{% if not forloop.last %};{% endif %}{% endfor %}?subject=Capstone%20Insper%20-%20Projeto:%20{{projeto}}&body=Grupo{% if sem_banca|length > 1 %}s{% endif %}%20do%20Capstone,%0D%0A%0D%0Aatenciosamente,%20{{configuracao.coordenacao.coordenador_email}}%20(coordenação%20Capstone)" target="_blank">
             <i class="fas fa-mail-bulk"></i>
           </a>
         </h5>
