--- a/organizacoes/templates/organizacoes/carrega_proposta.html
+++ b/organizacoes/templates/organizacoes/carrega_proposta.html
@@ -38,11 +38,16 @@
 
   <form action="" method="post" enctype="multipart/form-data"> {% csrf_token %}  
 
-    <label for="nome" style="width: 3.4em;">{% lng "Nome:" "Name:" %}</label> <input type="text" size="75" maxlength="127" id="nome" name="nome" value="{% if parceiro %}{{full_name}}{% endif %}" 
-      pattern="^[\s]*\S+(?:[\s]+\S+){1,99}[\s]*$" oninvalid="this.setCustomValidity('Digite o nome completo')" oninput="this.setCustomValidity('')" required><br>
-    <label for="email" style="width: 3.4em;">e-mail:</label> <input type="text" size="75"  maxlength="80" id="email" name="email" value="{% if parceiro %}{{email}}{% endif %}" 
-      pattern="^[\s]*([a-zA-Z0-9_\-\.]+)@([a-zA-Z0-9_\-\.]+)\.([a-zA-Z]{2,5}){1,99}[\s]*([;,][\s]*([a-zA-Z0-9_\-\.]+)@([a-zA-Z0-9_\-\.]+)\.([a-zA-Z]{2,5}){1,25})*[\s]*$" oninvalid="this.setCustomValidity('Digite um ou mais endereços de e-mail (e-mails separados por ponto e vírgula)')" oninput="this.setCustomValidity('')" required><br><br>
-    
+    <label for="nome" style="width: 3.4em;">
+      {% lng "Nome:" "Name:" %}</label>
+      <input type="text" size="75" maxlength="127" id="nome" name="nome" value="{% if request.user.is_authenticated %}{{request.user.get_full_name}}{% endif %}"
+      pattern="^[\s]*\S+(?:[\s]+\S+){1,99}[\s]*$" oninvalid="this.setCustomValidity('Digite o nome completo')" 
+      oninput="this.setCustomValidity('')" required><br>
+    <label for="email" style="width: 3.4em;">e-mail:</label> <input type="text" size="75"  maxlength="80" id="email" 
+      name="email" value="{% if request.user.is_authenticated %}{{request.user.email}}{% endif %}" 
+      pattern="^[\s]*([a-zA-Z0-9_\-\.]+)@([a-zA-Z0-9_\-\.]+)\.([a-zA-Z]{2,5}){1,99}[\s]*([;,][\s]*([a-zA-Z0-9_\-\.]+)@([a-zA-Z0-9_\-\.]+)\.([a-zA-Z]{2,5}){1,25})*[\s]*$" 
+      oninvalid="this.setCustomValidity('Digite um ou mais endereços de e-mail (e-mails separados por ponto e vírgula)')" oninput="this.setCustomValidity('')" required><br><br>
+
     <label for="arquivo" style="margin-left: 2em;">
       {% lng "Arquivo PDF:" "PDF File:" %}
     </label> 
