--- a/projetos/templates/projetos/projeto_completo.html
+++ b/projetos/templates/projetos/projeto_completo.html
@@ -466,7 +466,7 @@
   {% endif %}
 
   {% if user.prof_a %}
-    {% include "estudantes/includes/conduta_respostas.html" %}
+    {% include "estudantes/includes/conduta_respostas.html" with grupo=True %}
   {% endif %}
 
   {% if user.prof_a %}
