tabela mostrando as dinâmicas de grupo

--- a/academica/templates/academica/academica.html
+++ b/academica/templates/academica/academica.html
@@ -105,6 +105,18 @@
   </li>
 
   <li>
+    {% lng "Dinâmicas de Grupos" "Group Dynamics" %}
+  </li>
+  <li class="inside_ul">
+    <ul>
+      <a href="{% url 'dinamicas_grupos' %}"><li>
+        {% lng "Análise de Comportamento em Grupo por Estudante" "Group Behavior Analysis by Student" %}
+      </li></a>
+    </ul>
+  </li>
+
+
+  <li>
     {% lng "Correlações" "Correlations" %}
   </li>
   <li class="inside_ul">
