--- a/professores/templates/professores/objetivos_rubricas.html
+++ b/professores/templates/professores/objetivos_rubricas.html
@@ -33,7 +33,7 @@
 
       <b>{% lng "Data Inicial" "Initial Date" %}:</b>
       {{objetivo.data_inicial}}
-
+      &nbsp;&nbsp;
       <b>{% lng "Data Final" "Final Date" %}:</b>
       {% if objetivo.data_final %}{{objetivo.data_final}}{% else %}{% lng "Atual" "Current" %}{% endif %}<br>
 
@@ -52,26 +52,7 @@
       <div class="table-responsive" lang="pt">
       {% comment %} Tabela em Português {% endcomment %}
       <table class="table table-bordered table-sm" style="width:100%">
-        <thead class="table-info">
-          <tr>
-            <th scope="col" style="width:1%;"></th>
-            <th scope="col" class="tabela{{objetivo.id}} objetivo{{objetivo.id}}I" style="text-align: center;width:18%">
-              <label for="objetivo.{{objetivo.id}}.I ">{% lng "Insatisfatório" "Unsatisfactory" %} (I)</label>
-            </th>
-            <th scope="col" class="tabela{{objetivo.id}} objetivo{{objetivo.id}}D" style="text-align: center;width:18%">
-              <label for="objetivo{{objetivo.id}}D ">{% lng "Em Desenvolvimento" "Under Development" %} (D)</label>
-            </th>
-            <th scope="col" class="tabela{{objetivo.id}} objetivo{{objetivo.id}}C objetivo{{objetivo.id}}CX" style="text-align: center;width:18%">
-              <label for="objetivo{{objetivo.id}}C ">{% lng "Essencial" "Essential" %} (C/C+)</label>
-            </th>
-            <th scope="col" class="tabela{{objetivo.id}} objetivo{{objetivo.id}}B objetivo{{objetivo.id}}BX" style="text-align: center;width:18%">
-              <label for="objetivo{{objetivo.id}}B ">{% lng "Proficiente" "Proficient " %} (B/B+)</label>
-            </th>
-            <th scope="col" class="tabela{{objetivo.id}} objetivo{{objetivo.id}}A objetivo{{objetivo.id}}AX" style="text-align: center;width:18%">
-              <label for="objetivo{{objetivo.id}}A ">{% lng "Avançado" "Advanced" %} (A/A+)</label>
-            </th>
-          </tr>
-        </thead>
+        {% include "professores/includes/cabec_niveis.html" %}
         <tbody>
           <tr>
             {% comment %} Rubricas Intermediária de Grupo {% endcomment %}
@@ -110,26 +91,7 @@
       <div class="table-responsive" lang="en" >
       {% comment %} Tabela em Inglês {% endcomment %}
       <table class="table table-bordered table-sm" style="width:100%">
-        <thead class="table-info">
-          <tr>
-            <th scope="col" style="width:1%;"></th>
-            <th scope="col" class="tabela{{objetivo.id}} objetivo{{objetivo.id}}I" style="text-align: center;width:18%">
-              <label for="objetivo.{{objetivo.id}}.I ">{% lng "Insatisfatório" "Unsatisfactory" %} (I)</label>
-            </th>
-            <th scope="col" class="tabela{{objetivo.id}} objetivo{{objetivo.id}}D" style="text-align: center;width:18%">
-              <label for="objetivo{{objetivo.id}}D ">{% lng "Em Desenvolvimento" "Under Development" %} (D)</label>
-            </th>
-            <th scope="col" class="tabela{{objetivo.id}} objetivo{{objetivo.id}}C objetivo{{objetivo.id}}CX" style="text-align: center;width:18%">
-              <label for="objetivo{{objetivo.id}}C ">{% lng "Essencial" "Essential" %} (C/C+)</label>
-            </th>
-            <th scope="col" class="tabela{{objetivo.id}} objetivo{{objetivo.id}}B objetivo{{objetivo.id}}BX" style="text-align: center;width:18%">
-              <label for="objetivo{{objetivo.id}}B ">{% lng "Proficiente" "Proficient " %} (B/B+)</label>
-            </th>
-            <th scope="col" class="tabela{{objetivo.id}} objetivo{{objetivo.id}}A objetivo{{objetivo.id}}AX" style="text-align: center;width:18%">
-              <label for="objetivo{{objetivo.id}}A ">{% lng "Avançado" "Advanced" %} (A/A+)</label>
-            </th>
-          </tr>
-        </thead>
+        {% include "professores/includes/cabec_niveis.html" %}
         <tbody>
           {% comment %} Rubricas Intermediárias de Grupo {% endcomment %}
           <tr>
@@ -171,32 +133,9 @@
         <div class="table-responsive" lang="pt">
         {% comment %} Tabela em Português {% endcomment %}
         <table class="table table-bordered table-sm" style="width:100%">
-          <thead class="table-info">
-          <tr>
-            <th scope="col" style="width:1%;"></th>
-            <th scope="col" class="tabela{{objetivo.id}} objetivo{{objetivo.id}}I" style="text-align: center;width:18%">
-              <label for="objetivo.{{objetivo.id}}.I ">{% lng "Insatisfatório" "Unsatisfactory" %} (I)</label>
-            </th>
-            <th scope="col" class="tabela{{objetivo.id}} objetivo{{objetivo.id}}D" style="text-align: center;width:18%">
-              <label for="objetivo{{objetivo.id}}D ">{% lng "Em Desenvolvimento" "Under Development" %} (D)</label>
-            </th>
-            <th scope="col" class="tabela{{objetivo.id}} objetivo{{objetivo.id}}C objetivo{{objetivo.id}}CX" style="text-align: center;width:18%">
-              <label for="objetivo{{objetivo.id}}C ">{% lng "Essencial" "Essential" %} (C/C+)</label>
-            </th>
-            <th scope="col" class="tabela{{objetivo.id}} objetivo{{objetivo.id}}B objetivo{{objetivo.id}}BX" style="text-align: center;width:18%">
-              <label for="objetivo{{objetivo.id}}B ">{% lng "Proficiente" "Proficient " %} (B/B+)</label>
-            </th>
-            <th scope="col" class="tabela{{objetivo.id}} objetivo{{objetivo.id}}A objetivo{{objetivo.id}}AX" style="text-align: center;width:18%">
-              <label for="objetivo{{objetivo.id}}A ">{% lng "Avançado" "Advanced" %} (A/A+)</label>
-            </th>
-          </tr>
-          </thead>
+          {% include "professores/includes/cabec_niveis.html" %}
           <tbody>
-            
-
-
           {% comment %} INTERMEDIARIA Rubricas Individuais {% endcomment %}
-          
           <tr>
             <th scope="row" style="vertical-align: bottom; overflow: hidden; background-color:rgb(226, 243, 245);">
               <div style="transform: rotate(270deg); width: 1.2em;">
@@ -232,31 +171,16 @@
         <div class="table-responsive" lang="en">
         {% comment %} Tabela em Inglês {% endcomment %}
         <table class="table table-bordered table-sm" style="width:100%">
-          <thead class="table-info">
-          <tr>
-            <th scope="col" style="width:1%;"></th>
-            <th scope="col" class="tabela{{objetivo.id}} objetivo{{objetivo.id}}I" style="text-align: center;width:18%">
-              <label for="objetivo.{{objetivo.id}}.I ">{% lng "Insatisfatório" "Unsatisfactory" %} (I)</label>
-            </th>
-            <th scope="col" class="tabela{{objetivo.id}} objetivo{{objetivo.id}}D" style="text-align: center;width:18%">
-              <label for="objetivo{{objetivo.id}}D ">{% lng "Em Desenvolvimento" "Under Development" %} (D)</label>
-            </th>
-            <th scope="col" class="tabela{{objetivo.id}} objetivo{{objetivo.id}}C objetivo{{objetivo.id}}CX" style="text-align: center;width:18%">
-              <label for="objetivo{{objetivo.id}}C ">{% lng "Essencial" "Essential" %} (C/C+)</label>
-            </th>
-            <th scope="col" class="tabela{{objetivo.id}} objetivo{{objetivo.id}}B objetivo{{objetivo.id}}BX" style="text-align: center;width:18%">
-              <label for="objetivo{{objetivo.id}}B ">{% lng "Proficiente" "Proficient " %} (B/B+)</label>
-            </th>
-            <th scope="col" class="tabela{{objetivo.id}} objetivo{{objetivo.id}}A objetivo{{objetivo.id}}AX" style="text-align: center;width:18%">
-              <label for="objetivo{{objetivo.id}}A ">{% lng "Avançado" "Advanced" %} (A/A+)</label>
-            </th>
-          </tr>
-          </thead>
+          {% include "professores/includes/cabec_niveis.html" %}
           <tbody>
           
             {% comment %} Rubricas Individuais {% endcomment %}
             <tr>
-              <th scope="row" style="writing-mode: vertical-lr;text-orientation: mixed; transform:scale(-1); text-align: center;">{% lng "Intermediária" "Intermediate" %}</td>
+              <th scope="row" style="vertical-align: bottom; overflow: hidden; background-color:rgb(226, 243, 245);">
+                <div style="transform: rotate(270deg); width: 1.2em;">
+                {% lng "Intermediária" "Intermediate" %}
+                </div>
+              </th>
               <td class="tabela{{objetivo.id}} objetivo{{objetivo.id}}I" ><label for="objetivo{{objetivo.id}}I">{{objetivo.rubrica_intermediaria_individual_I_en}}</label></td>
               <td class="tabela{{objetivo.id}} objetivo{{objetivo.id}}D" ><label for="objetivo{{objetivo.id}}D">{{objetivo.rubrica_intermediaria_individual_D_en}}</label></td>
               <td class="tabela{{objetivo.id}} objetivo{{objetivo.id}}C objetivo{{objetivo.id}}CX" ><label for="objetivo{{objetivo.id}}C">{{objetivo.rubrica_intermediaria_individual_C_en}}</label></td>
@@ -266,7 +190,11 @@
             
             {% comment %} Rubricas Individuais {% endcomment %}
             <tr>  
-              <th scope="row" style="writing-mode: vertical-lr;text-orientation: mixed; transform:scale(-1); text-align: center;">{% lng "Final" "Final" %}</td>
+              <th scope="row" style="vertical-align: bottom; overflow: hidden; background-color:rgb(226, 243, 245);">
+                <div style="transform: rotate(270deg); width: 1.2em;">
+                {% lng "Final" "Final" %}
+                </div>
+              </th>
               <td class="tabela{{objetivo.id}} objetivo{{objetivo.id}}I" ><label for="objetivo{{objetivo.id}}I">{{objetivo.rubrica_final_individual_I_en}}</label></td>
               <td class="tabela{{objetivo.id}} objetivo{{objetivo.id}}D" ><label for="objetivo{{objetivo.id}}D">{{objetivo.rubrica_final_individual_D_en}}</label></td>
               <td class="tabela{{objetivo.id}} objetivo{{objetivo.id}}C objetivo{{objetivo.id}}CX" ><label for="objetivo{{objetivo.id}}C">{{objetivo.rubrica_final_individual_C_en}}</label></td>
