--- a/templates/documento.html
+++ b/templates/documento.html
@@ -51,7 +51,7 @@
     {% endif %}
   {% endif %}
   {% if request.user.admin %}
-    <a href="#" class="open-documento" data-url="{% url 'adiciona_documento_tipo' documento.tipo_documento.sigla %}"> 
+    <a href="#" class="open-documento esconder" data-url="{% url 'adiciona_documento_tipo' documento.tipo_documento.sigla %}"> 
       <i class="fas fa-pencil-alt" style="font-size: 0.7em;"></i>
     </a>
   {% endif %}
